--- a/exercise4/styles.css
+++ b/exercise4/styles.css
@@ -22,7 +22,7 @@ img {
     width: 25%;
 }
 
-.flex-container{
+.flex-container {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -40,7 +40,7 @@ main {
 }
 
 .column {
-    padding: 2opx;
+    padding: 20px;
     height: 100%;
     width: 50%;
 }
@@ -50,8 +50,9 @@ main {
         background: green;
     }
 }
+
 @media (max-width: 450px) {
-    .flex-container{
+    .flex-container {
         background: orange;
     }
 }
