--- a/exercise4/styles.css
+++ b/exercise4/styles.css
@@ -19,7 +19,10 @@ main, header, footer {
 }
 
 img {
-    width: 25%;
+    width: 100%;
+    height: 480px;
+    object-fit: cover;
+    object-position: 0% 50%;
 }
 
 .flex-container {
