--- a/midreview/styles.css
+++ b/midreview/styles.css
@@ -4,22 +4,24 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Libre Baskerville', sans-serif;
-    background-color: #wheat;
-    color: #536079;
-}
+
+
+
 
 nav {
     height: 60px;
 }
 
-.container {
+.flex-container {
     display: flex;
     justify-content: space-around;
+    position: static;
     list-style-type: none;
     line-height: 60px;
     background: #B7E3E4;
+    font-size: 18px;
+    font-family: 'Libre Franklin', sans-serif;
+    font-weight: 700;
 }
 
 a {
@@ -44,3 +46,39 @@ li:hover {
     100% {background-color: tomato;
     }
 }
+
+img {
+    width: 100%;
+    height: 600px;
+    object-position: center;
+}
+
+.column {
+    padding: 40px;
+    height: 100%;
+    width: 50%;
+    justify-content: center;
+}
+
+.container{
+    display: flex;
+    list-style-type: none;
+    line-height: 24px;
+    background: whitesmoke;
+    font-weight: 400;
+    font-size: 12px;
+    }
+      .column {
+      width: 50%;
+      height: 300px;
+      background: #F5D501;
+      
+    }
+
+    body {
+        font-family: 'Libre Baskerville', serif;
+        background-color: ;
+        color: #536079;
+        font-size: 12px;
+        font-weight: 400;
+    }
