--- a/midreview/styles.css
+++ b/midreview/styles.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-
-
-
-
 nav {
     height: 60px;
 }
@@ -15,7 +11,6 @@ nav {
 .flex-container {
     display: flex;
     justify-content: space-around;
-    position: static;
     list-style-type: none;
     line-height: 60px;
     background: #B7E3E4;
@@ -29,11 +24,8 @@ a {
     color: #e54b4b;
 }
 
-li {
-    padding: 0 40px;
-}
 li:hover {
-    animation: colors 5s;
+    animation: colors 2s ease-out;
 }
 
 @keyframes colors {
@@ -41,43 +33,52 @@ li:hover {
     }
     40% {background-color: #CC0000;
     }
-    60% {background-color: #80000;
+    60% {background-color: #CC0000;
     }
     100% {background-color: tomato;
     }
 }
 
-img {
-    width: 100%;
-    height: 600px;
-    object-position: center;
-}
-
-.column {
-    padding: 40px;
-    height: 100%;
-    width: 50%;
-    justify-content: center;
-}
-
-.container{
+.container {
     display: flex;
     list-style-type: none;
     line-height: 24px;
     background: whitesmoke;
     font-weight: 400;
     font-size: 12px;
-    }
+    justify-content: center;
+}
+
+.container-subtitle {
+    display: flex;
+    font-family: 'Libre Baskerville', serif;
+        color: #536079;
+        font-size: 12px;
+        font-weight: 400;
+        font-style: italic;
+        line-height: 16px;
+        background: whitesmoke;
+        padding-left: 500px;
+}
+
+img {
+    width: 100%;
+    height: 600px; 
+    margin-top: 40px;
+    margin-bottom: 40px;   
+}
       .column {
-      width: 50%;
+      width: 100%;
       height: 300px;
-      background: #F5D501;
-      
+      background: #F5CF55;
+      padding-top: 70px;
+      padding-left: 500px;
+      padding-right: 500px;
+      padding-bottom: 70px;
     }
 
     body {
         font-family: 'Libre Baskerville', serif;
-        background-color: ;
         color: #536079;
         font-size: 12px;
         font-weight: 400;
