--- a/midreview/styles.css
+++ b/midreview/styles.css
@@ -5,18 +5,18 @@
 }
 
 nav {
-    height: 60px;
+    height: 50px;
 }
 
 .flex-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     list-style-type: none;
-    line-height: 60px;
-    background: #B7E3E4;
+    line-height: 50px;
+    background: whitesmoke;
     font-size: 18px;
     font-family: 'Libre Franklin', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 a {
@@ -46,15 +46,15 @@ li {
 .container {
     display: flex;
     list-style-type: none;
-    line-height: 24px;
+    line-height: 30px;
     background: whitesmoke;
     font-weight: 400;
     font-size: 12px;
     justify-content: center;
+    font-family: 'Libre Baskerville', serif;
 }
 
-.container-subtitle {
-    display: flex;
+.font {
     font-family: 'Libre Baskerville', serif;
         color: #536079;
         font-size: 12px;
@@ -62,14 +62,13 @@ li {
         font-style: italic;
         line-height: 16px;
         background: whitesmoke;
-        padding-left: 500px;
 }
 
 img {
     width: 100%;
     height: 600px; 
     margin-top: 40px;
-    margin-bottom: 40px;   
+    margin-bottom: 10px;   
 }
       .column {
       width: 100%;
@@ -82,7 +81,7 @@ img {
     }
 
     body {
-        font-family: 'Libre Baskerville', serif;
+        font-family: 'Libre Franklin', sans-serif;
         color: #536079;
         font-size: 12px;
         font-weight: 400;
