--- a/Project01/styles.css
+++ b/Project01/styles.css
@@ -54,7 +54,7 @@ li {
     font-family: 'Libre Baskerville', serif;
 }
 
-.font {
+.caption {
     font-family: 'Libre Baskerville', serif;
         color: #536079;
         font-size: 12px;
