--- a/FinalProject/style.css
+++ b/FinalProject/style.css
@@ -22,7 +22,7 @@
   }
   
   .list {
-    height: 80vh;
+    height: 150vh;
   }
   
   .filter-btn {
@@ -36,16 +36,17 @@
   }
   
   .filter-btn.active {
-    color: #536079;
-    border-color: #B7E3E4;
-    background: #B7E3E4;
+    color: black;
+    border-color: #F5C64A;
+    background: #F5C64A;
   }
   
   ul {
     display: flex;
     flex-direction: row;
-    /*   flex-wrap: wrap; */
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    width: 1300px;
   }
 
   li.card {
@@ -53,9 +54,11 @@
     border: 2px solid #141414;
     padding: 10px;
     margin: 10px;
-    width: 20%;
-    display: grid;
-  grid-gap: 20px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  grid-gap: 10px;
   }
 
   li:hover {
